<resources>
    <string name="app_name">Restaurant Reports</string>
    <string name="res_png">res_png</string>
    <string name="cutlery">cutlery</string>
    <string name="critical_issues">Critical issues -</string>
    <string name="non_critical_issues">Non-Critical issues -</string>
    <string name="time">Time -</string>
    <string name="number_violations">%d violations found during inspection</string>
    <string name="last_inspect">Last inspection was %s</string>
    <string name="days">%d days ago</string>
    <string name="month">on %s %d</string>
    <string name="year">in %s %d</string>
    <string name="empty" />
    <string name="low">Low</string>
    <string name="no_inspections">No inspections so far</string>
    <string name="inspections">Inspections</string>
    <string name="backText">back</string>
    <string name="inspection_type">Inspection Type: %s</string>
    <string name="non_critical"># Non-critical Issues Found: %d</string>
    <string name="critical"># Critical Issues Found: %d</string>
    <string name="back">Back</string>
    <string name="violation_summary">%s - %s</string>
    <string name="full_date">%s %d, %d</string>
    <string name="date">%s %d</string>
    <string name="address">%s, %s</string>
    <string name="coord">%s, %s</string>
    <string name="hazard_text">%s - Hazardous Rating: %s</string>
    <string name="violations">Violations</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Download Now</string>
    <string name="updates">New updates are available</string>
    <string name="finalize_updates">Finalizing updates</string>
    <string name="current_downloading">Downloading %s… %s%%</string>
    <string name="start_download">Starting %s</string>
    <string name="find_a_restaurant">Find a restaurant</string>
    <string name="gte"><![CDATA[>=]]></string>
    <string name="lte"><![CDATA[<=]]></string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="clear_amount">Clear (%d)</string>
    <string name="show_favorites">Show Favorites</string>
    <string name="number_of_critical_issues">Number of Critical Issues</string>
    <string name="hazard_level">Last Report Hazard Level</string>
    <string name="issues"># Issues within the last year</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="hazard_rating">%s hazard rating</string>
    <string name="new_inspections">New Inspections</string>
    <string name="your_favorite_restaurants_got_inspected">Your favorite restaurants got inspected</string>
    <string name="routine">Routine</string>
    <string name="follow_up">Follow-Up</string>
</resources>