<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="mainPageViewModel"
            type="com.group11.cmpt276_project.viewmodel.MainPageViewModel" />
        <variable
            name="activity"
            type="com.group11.cmpt276_project.view.ui.MainPageActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:onClick="@{() -> activity.noOp()}">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.59"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_btn_apply_filter"
            android:onClick="@{() -> activity.applyFilter()}"
            android:text="@string/apply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_no_bg"
            android:onClick="@{() -> activity.closeFilter()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintTop_toTopOf="@+id/button7" />

        <Button
            android:id="@+id/clear_all_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_no_bg"
            android:onClick="@{() -> activity.clearFilter()}"
            android:text="@{mainPageViewModel.numberFiltersApplied != 0 ? String.format(@string/clear_amount, mainPageViewModel.numberFiltersApplied) : @string/clear}"
            android:alpha="@{mainPageViewModel.numberFiltersApplied != 0 ? 1.0f : 0.5f}"
            android:clickable="@{mainPageViewModel.numberFiltersApplied != 0}"
            android:enabled="@{mainPageViewModel.numberFiltersApplied != 0}"
            app:layout_constraintBottom_toBottomOf="@+id/button5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button5" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:checked="@={mainPageViewModel.isFavorite}"
            android:text="@string/show_favorites"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/issues"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="10dp"
            android:text="@={mainPageViewModel.number}"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:checkedButton="@={mainPageViewModel.hazardLevel}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/Low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low" />

            <RadioButton
                android:id="@+id/Moderate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moderate" />

            <RadioButton
                android:id="@+id/High"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@={mainPageViewModel.isGrt}"
            app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/gte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gte"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/lte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lte"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/number_of_critical_issues"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageButton
            android:id="@+id/clear_issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/btn_no_bg"
            android:onClick="@{() -> activity.clearNumberCritical()}"
            android:src="@drawable/ic_close"
            android:tint="#F44336"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hazard_level"
            app:layout_constraintStart_toStartOf="@+id/editTextNumber"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <ImageButton
            android:id="@+id/clear_hazard_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/btn_no_bg"
            android:onClick="@{() -> activity.clearHazardLevel()}"
            android:src="@drawable/ic_close"
            android:tint="#F44336"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintTop_toTopOf="@+id/button5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

