<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="report"
            type="com.group11.cmpt276_project.service.model.InspectionReport" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/res_detail_critical"
                android:layout_width="109dp"
                android:layout_height="22dp"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:translationX="103dp"
                android:text="@{report.numberCritical}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toEndOf="@+id/recycler_row_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/res_detail_non_cric"
                android:layout_width="138dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:translationX="135dp"
                android:translationY="1dp"
                android:text="@{report.numberNonCritical}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toEndOf="@+id/recycler_row_icon"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/res_detail_time"
                android:layout_width="49dp"
                android:layout_height="20dp"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold"
                android:translationX="50dp"
                app:date="@{report != null ? report.inspectionDate : @string/empty}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.081"
                app:layout_constraintStart_toEndOf="@+id/recycler_row_icon"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.272" />

            <ImageView
                android:id="@+id/recycler_row_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:hazard="@{report != null ? report.hazardRating: @string/low}"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="103dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/critical_issues"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toEndOf="@+id/recycler_row_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="134dp"
                android:layout_height="19dp"
                android:layout_marginTop="4dp"
                android:text="@string/non_critical_issues"
                android:textStyle="bold"
                android:translationY="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toEndOf="@+id/recycler_row_icon"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="49dp"
                android:layout_height="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/time"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.081"
                app:layout_constraintStart_toEndOf="@+id/recycler_row_icon"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.272" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>